# kelma-sync

./: .dockerignore  .env.example  .env.prod.example  .gitignore  API.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Makefile  NOTICE  README.md  SCHEMA.md  SECURITY.md  TRADEMARKS.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: ci.yml
clients/python/: README.md  pyproject.toml
clients/python/kelma_sync_v2/: anki_apply.py  anki_local.py  canonical_sync.py  card_sync.py  checksum_rs.py  client.py  comparison_cache.py  conflict_policy.py  content_sync.py  deck_sync.py  engine.py  full_diff.py  media_sync.py  namespace_compare.py  note_sync.py  notetype_sync.py  review_sync.py  sync_state.py  tombstone_sync.py
clients/rust/kelma-hash/: Cargo.toml
clients/rust/kelma-hash/src/: lib.rs  main.rs
cmd/server/: main.go
internal/auth/: auth.go  context.go  immersion.go
internal/db/: db.go  migrate.go
internal/handler/: auth.go  batch.go  bytereader.go  cards.go  checksum.go  checksum_test.go  decks.go  errors.go  handler.go  handler_test.go  health.go  immersion.go  internal.go  manifest.go  media.go  notes.go  notetypes.go  reviews.go  summary.go  time_test.go  tombstone.go  upsert.go  usage.go  util.go
internal/model/: model.go
internal/storage/: fs.go  memory.go  storage.go
migrations/: 001_initial.sql  002_card_logical_identity.sql  003_immersion_summary_indexes.sql  004_review_history.sql
scripts/: e2e_anki_test_deck.py  e2e_v2.py  seed.sh  smoke.sh
(+8 files in other folders)
